fix(Ship): Long lists not in overflow scroll

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,6 +89,10 @@ body {
   margin-top: auto;
 }
 
+.w-full {
+  width: 100%;
+}
+
 /* Main layout
 */
 
